@@ -1,0 +1,7 @@
+#!perl
+{
+  paths => {
+    renderer => ['t/assets'],
+    static => ['t/assets'],
+  }
+}
